--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="css/style.css?ver=02062020" type="text/css" rel="stylesheet" media="all" />
+    <link href="css/style.css?ver=03062020F" type="text/css" rel="stylesheet" media="all" />
   </head>
   <body>
     <div class="section no-pad-bot" id="startgame">
@@ -70,7 +70,7 @@
     </div>
     <div class="invisible container" id="game">
       <div class="section">
-          <h6 class="center blue-text text-darken-4 mb20" id="definitie" >Sunt o carte din Biblie și am pe lângă mine pe</h6>
+          <h4 class="center blue-text text-darken-4 mb20" id="definitie" >Sunt o carte din Biblie și am pe lângă mine pe</h4>
         <div class="row">
           <div class="col s6 m3 offset-m3">
             <img src="" id="clue1" onClick="open_modal(this.src);" class="clue c1" />
@@ -142,6 +142,6 @@
 	
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.min.js"></script>
-  <script src="js/game.js?ver=02062020.2"></script>
+  <script src="js/game.js?ver=03062020F"></script>
   </body>
 </html>
