--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="css/style.css?ver=03062020F" type="text/css" rel="stylesheet" media="all" />
+    <link href="css/style.css?ver=03062020.F" type="text/css" rel="stylesheet" media="all" />
   </head>
   <body>
     <div class="section no-pad-bot" id="startgame">
