--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
               <li><i class="instr_ico material-icons">help</i>După o încercare sau două, ți se va oferi posibilitatea de a primi ca indiciu prima literă a cuvântului</li>
        		  <li><i class="instr_ico material-icons">assignment_turned_in</i> Dacă introduci soluția corectă, avansezi la următorul nivel. </li>
               <li><b>Succes!</b></li>
+			 <br/>
+			  <li><i>Sursele imaginilor din acest proiect pot fi consultate <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vS4AMLdDuOoTNoptCtqdrY4BcIaPlrwTnh_qblgKGYXBwUqoVGIvP82v8YSSOcWsuTu5W5bDebCwgrv/pubhtml?gid=348971332&single=true">aici</a>. </i></li>
+           
             </ul>
           </div>
         </div>
@@ -82,7 +85,7 @@
         <div id="resetable">
           <div class="row">
             <div class="col s12">
-               <h6 class="center mb0 mt0 red-text text-darken-4 cine-sunt" >Cine sunt?</h6>
+               <h4 class="center mb0 mt0 red-text text-darken-4 cine-sunt" >Cine sunt?</h4>
               <h2 class="center" id="incercare" >_ _ _ _ _ _</h2>
             </div>
           </div>
