--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <h1 class="header center red-text text-darken-4">Trei cărți</h1>
         <div class="row">
           <div class="col s12 light m6 offset-m3">
+		   <i class="center cent"> versiunea <b>2.0</b></i>
             <ul class="instructiuni">
+			 
               <li><i class="instr_ico material-icons">lightbulb_outline</i>Privește cele două imagini și încearcă să-ți amintești, fără să te uiți în Biblie, ce carte se află între cele două cărți afșate. Citește și indiciul de sub imagini, care îți spune din ce parte a Bibliei este! Când găsești soluția, apasă, pe rând pe literele colorate. </li>
               <li><i class="instr_ico material-icons">loop</i> Dacă ai apăsat greșit pe o literă, apasă din nou pe ea și aceasta se va șterge. Poți șterge tot ce ai introdus apăsând pe butonul de resetare. </li>
               <li><i class="instr_ico material-icons">error_outline</i> Dacă introduci o soluție incorectă, te voi ruga să încerci din nou. Dacă ți se pare prea greu, apasă pe butonul <i  class="home material-icons">home</i> și selectează modul de joc ușor, în care primești indiciul mai devreme, iar literele sunt mai puține și ordonate alfabetic. </li>
