Added link back to funbible + google analytics

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>3 cărți - Fun Bible</title>
+    <title>3 Cărți - Fun Bible</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Fun Bible">
-    <meta name="description" content="Cu ajutorul nostru, copiii vor învăța lucruri interesante despre Dumnezeu într-un mod inedit!">
-    <meta property="og:description" content="Cu ajutorul nostru, copiii vor învăța lucruri interesante despre Dumnezeu într-un mod inedit!">
-    <meta property="twitter:card" content="Cu ajutorul nostru, copiii vor învăța lucruri interesante despre Dumnezeu într-un mod inedit!">
+    <meta property="og:title" content="3 Cărți - Fun Bible">
+    <meta name="description" content="Cărțile Bibliei s-au amestecat și au nevoie de ajutorul tău să se așeze în ordine. Una din provocările copiilor din grupa mea este să rețină ordinea cărților Bibliei, iar acest joc i-a făcut să le memoreze prin joc. Memoria ta cum stă? Testeaz-o și învață cu noi!">
+    <meta property="og:description" content="Cărțile Bibliei s-au amestecat și au nevoie de ajutorul tău să se așeze în ordine. Una din provocările copiilor din grupa mea este să rețină ordinea cărților Bibliei, iar acest joc i-a făcut să le memoreze prin joc. Memoria ta cum stă? Testeaz-o și învață cu noi!">
+    <meta property="twitter:card" content="Cărțile Bibliei s-au amestecat și au nevoie de ajutorul tău să se așeze în ordine. Una din provocările copiilor din grupa mea este să rețină ordinea cărților Bibliei, iar acest joc i-a făcut să le memoreze prin joc. Memoria ta cum stă? Testeaz-o și învață cu noi!">
     <meta property="og:image" content="https://funbible.net/assets/logo.jpg">
-    <meta property="og:url" content="https://funbible.net/4imagini">
+    <meta property="og:url" content="https://3carti.funbible.net/">
     <meta property="og:type" content="website">
     <meta property="fb:app_id" content="231905474567538">
-    <meta property="og:site_name" content="4 Imagini - Fun Bible">
+    <meta property="og:site_name" content="3 Cărți - Fun Bible">
     <meta property="og:locale" content="ro_RO">
     <meta property="keywords" content="jocuri biblice,jocuri crestine,activitati crestine,activitati biblice,pagini de colorat biblice,pagini de colorat crestine,jocuri de sabat,activitati de sabat,desene biblice,desene de sabat,desene crestine">
     <link rel="icon" type="image/x-icon" href="https://funbible.net/favicon.ico">
@@ -22,6 +22,14 @@
     <link href="css/style.css?ver=03062020.F" type="text/css" rel="stylesheet" media="all" />
   </head>
   <body>
+    <!--START - Connection to FunBible.net-->
+    <a href="https://funbible.net/activities/" class="back-link">
+      <button class="orange-button">
+        <svg role="img" aria-hidden="true" width="20" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left fa-w-14" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"></path></svg>
+      </button>
+      <img src="https://funbible.net/assets/logo.svg" height="60" />
+    </a>
+    <!--END - Connection to FunBible.net-->
     <div class="section no-pad-bot" id="startgame">
       <div class="container">
         <img class="header center fb" src="https://funbible.net/assets/logo.svg" >
@@ -144,9 +152,19 @@
     <audio id="s_switch">
       <source src="audio/switch.mp3" preload="auto" type="audio/mp3">
     </audio>
-	
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.min.js"></script>
-  <script src="js/game.js?ver=03062020F"></script>
-  </body>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163030951-1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-163030951-1');
+  </script>
+  <!-- End Google Analytics -->
+ <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+ <script src="js/materialize.min.js"></script>
+ <script src="js/game.js?ver=03062020F"></script>
+ </body>
 </html>
