Implement Privacy Policy

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="css/style.css?ver=23072020" type="text/css" rel="stylesheet" media="all" />
+    <link href="css/style.css?ver=28072020" type="text/css" rel="stylesheet" media="all" />
   </head>
   <body>
     <!--START - Connection to FunBible.net-->
@@ -32,13 +32,16 @@
     <!--END - Connection to FunBible.net-->
   <div class="section no-pad-bot" id="startgame">
          <div class="container">
-            <h1 class="header titlu-joc center blue-text text-darken-4">4 Imagini</h1>
+            <h1 class="header center red-text text-darken-4">3 Cărți</h1>
             <div class="row center mb0">
-               <h5 class="header col s12 m6 offset-m3 light mb20">Bine ai venit<span id="salut"></span>! Cele patru imagini pe care le vei vedea au în comun un cuvânt. Găsește cuvântul și apoi selectează literele în ordine, pentru a forma cuvântul!</h5>
+               <h5 class="header col s12 m6 offset-m3 light mb20">Bine ai venit<span id="salut"></span>! Cărțile Bibliei s-au amestecat și au nevoie de ajutorul tău să se așeze în ordine. Află cartea și apoi selectează literele în ordine!</h5>
             </div>
             <div class="row center mb0">
-               <div id="noname" class="mb10"><span id="alertme"></span><span class="nl">Numele tău: </span><br/><input type="text" placeholder="Scrie numele tău aici" name="nume-participant" id="nume-participant" ><br/></div>
-			   <a class="btn-large waves-effect waves-light green darken-2 start mb20" onclick="start(1);" id="startlevel">Începe</a><br/>
+                <div id="noname" class="mb10"><span id="alertme"></span><span class="nl">Numele tău: </span><br/><input type="text" placeholder="Scrie numele tău aici" name="nume-participant" id="nume-participant" ><br/>
+			    <label><input id="termsandconditions" type="checkbox" /><span>Am citit și sunt de acord cu <br/><i><a class="grey-text" href="https://docs.google.com/document/d/1JL21qeYWquP3HaMKV6k0TNsNJVEp2imjdsqUedLjriw/edit?usp=sharing" target="_new">Politica de confidențialitate</a>&nbsp; &nbsp; &nbsp;</i>
+				</span></label>
+				</div>
+				<a class="btn-large waves-effect waves-light green darken-2 start mb20" onclick="start(1);" id="startlevel">Începe</a><br/>
                <div class="switch" ><label><span id="easy">Mod ușor</span><input type="checkbox" id="mode"><span class="lever"></span><span id="hard">Mod avansat</span></label></div>
                <br/>
             </div>
@@ -60,15 +63,14 @@
 		   <i class="center cent"> versiunea <b>2.5</b></i>
             <ul class="instructiuni">
 			 
-              <li><i class="instr_ico material-icons">lightbulb_outline</i>Privește cele două imagini și încearcă să-ți amintești, fără să te uiți în Biblie, ce carte se află între cele două cărți afșate. Citește și indiciul de sub imagini, care îți spune din ce parte a Bibliei este! Când găsești soluția, apasă, pe rând pe literele colorate. </li>
+              <li><i class="instr_ico material-icons">lightbulb_outline</i>Privește cele două imagini și încearcă să-ți amintești, fără să te uiți în Biblie, ce carte se află între cele două cărți afșate. Citește și indiciul aflat deasupra imaginilor, care îți spune din ce parte a Bibliei este! Când găsești soluția, apasă, pe rând pe literele colorate. </li>
               <li><i class="instr_ico material-icons">loop</i> Dacă ai apăsat greșit pe o literă, apasă din nou pe ea și aceasta se va șterge. Poți șterge tot ce ai introdus apăsând pe butonul de resetare. </li>
               <li><i class="instr_ico material-icons">error_outline</i> Dacă introduci o soluție incorectă, te voi ruga să încerci din nou. Dacă ți se pare prea greu, apasă pe butonul <i  class="home material-icons">home</i> și selectează modul de joc ușor, în care primești indiciul mai devreme, iar literele sunt mai puține și ordonate alfabetic. </li>
               <li><i class="instr_ico material-icons">help</i>După o încercare sau două, ți se va oferi posibilitatea de a primi ca indiciu prima literă a cuvântului</li>
        		  <li><i class="instr_ico material-icons">assignment_turned_in</i> Dacă introduci soluția corectă, avansezi la următorul nivel. </li>
               <li><b>Succes!</b></li>
 			 <br/>
-			  <li><i>Sursele imaginilor din acest proiect pot fi consultate <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vS4AMLdDuOoTNoptCtqdrY4BcIaPlrwTnh_qblgKGYXBwUqoVGIvP82v8YSSOcWsuTu5W5bDebCwgrv/pubhtml?gid=348971332&single=true">aici</a>. </i></li>
-              <li><i>Citește despre politica de confidențialitate și utilizarea cookie-urilor <a href="https://docs.google.com/document/d/1JL21qeYWquP3HaMKV6k0TNsNJVEp2imjdsqUedLjriw/edit?usp=sharing" target="_new">aici</a>. </i></li>
+			  <li><i>Sursele imaginilor din acest proiect pot fi consultate <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vS4AMLdDuOoTNoptCtqdrY4BcIaPlrwTnh_qblgKGYXBwUqoVGIvP82v8YSSOcWsuTu5W5bDebCwgrv/pubhtml?gid=348971332&single=true">aici</a>. Citește despre politica de confidențialitate și utilizarea cookie-urilor <a href="https://docs.google.com/document/d/1JL21qeYWquP3HaMKV6k0TNsNJVEp2imjdsqUedLjriw/edit?usp=sharing" target="_new">aici</a>. </i></li>
            </ul>
           </div>
         </div>
@@ -90,7 +92,7 @@
                </div>
             </div>
             <div class="row center">
-               <a   class="btn-large waves-effect waves-light green darken-1 start" onclick="ranking_page(1);" >Înapoi acasa</a>
+               <a   class="btn-large waves-effect waves-light green darken-1 start" onclick="ranking_page(1);" >Înapoi acasă</a>
             </div>
          </div>
       </div>	
@@ -190,6 +192,6 @@
   <!-- End Google Analytics -->
  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
  <script src="js/materialize.min.js"></script>
- <script src="js/game.js?ver=24072020"></script>
+ <script src="js/game.js?ver=28072020"></script>
  </body>
 </html>
