--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		   <i class="center cent"> versiunea <b>2.5</b></i>
             <ul class="instructiuni">
 			 
-              <li><i class="instr_ico material-icons">lightbulb_outline</i>Privește cele două imagini și încearcă să-ți amintești, fără să te uiți în Biblie, ce carte se află între cele două cărți afșate. Citește și indiciul aflat deasupra imaginilor, care îți spune din ce parte a Bibliei este! Când găsești soluția, apasă, pe rând pe literele colorate. </li>
+              <li><i class="instr_ico material-icons">lightbulb_outline</i>Privește cele două imagini și încearcă să-ți amintești, fără să te uiți în Biblie, ce carte se află între cele două cărți afișate. Citește și indiciul aflat deasupra imaginilor, care îți spune din ce parte a Bibliei este! Când găsești soluția apasă, pe rând, literele colorate. </li>
               <li><i class="instr_ico material-icons">loop</i> Dacă ai apăsat greșit pe o literă, apasă din nou pe ea și aceasta se va șterge. Poți șterge tot ce ai introdus apăsând pe butonul de resetare. </li>
               <li><i class="instr_ico material-icons">error_outline</i> Dacă introduci o soluție incorectă, te voi ruga să încerci din nou. Dacă ți se pare prea greu, apasă pe butonul <i  class="home material-icons">home</i> și selectează modul de joc ușor, în care primești indiciul mai devreme, iar literele sunt mai puține și ordonate alfabetic. </li>
               <li><i class="instr_ico material-icons">help</i>După o încercare sau două, ți se va oferi posibilitatea de a primi ca indiciu prima literă a cuvântului</li>
@@ -88,7 +88,7 @@
                   </div>
                   <br/>
                   <h3 class="clasament-title cent center" id="lasttofthem"><span id="lastofthem" class="invisible" >Nu te descuraja dacă nu ești printre primii! Vei ajunge curând!</span>
-				  <span id="firstofthem" class="invisible">Felicitări ești printre primii jucători! Ține-o tot așa!</span></h3>
+				  <span id="firstofthem" class="invisible">Felicitări! Ești printre primii jucători! Ține-o tot așa!</span></h3>
                </div>
             </div>
             <div class="row center">
@@ -100,10 +100,10 @@
       <div class="container">
         <h1 class="header center red-text text-darken-4">Felicitări</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Ai terminat toate nivelurile acestui joc cu un scor total de <b id="scor_total">100</b> puncte! <br/></h5>
+          <h5 class="header col s12 light">Ai terminat toate nivelurile acestui joc cu un scor total de <b id="scor_total">100</b> puncte! <br/> Poți începe din nou, dar numele și scorul se vor reseta!</h5>
         </div>
         <div class="row center">
-          <a   class="btn-large waves-effect waves-light yellow darken-3 start" onclick="newGame()"; >Începe din nou</a>
+          <a   class="btn-large waves-effect waves-light yellow darken-3 start" onclick="newGame()"; >Începe din nou!</a>
         </div>
       </div>
     </div>
