--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		<div id="resetable">
                <div class="row">
                   <div class="col s12">
-                     <h5 class="center mb0 mt0 red-text text-darken-4 whoami">Cine sunt?</h5>
+                     <h5 class="center mb0 mt0 red-text text-darken-4 whoami"><span class="lang-ro">Cine sunt?</span><span class="lang-en">Who am I?</span></h5>
                      <h2 class="center" id="usertry" ></h2>
                   </div>
                </div>
