--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="css/style.css?ver=28072020" type="text/css" rel="stylesheet" media="all" />
+    <link href="css/style.min.css?ver=24092020" type="text/css" rel="stylesheet" media="all" />
   </head>
   <body>
      <a href="https://funbible.net/activities/" class="back-link">
@@ -250,6 +250,6 @@
   </script>
  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
  <script src="js/materialize.min.js"></script>
- <script src="js/game.js?ver=28072020"></script>
+ <script src="js/game.js?ver=24092020"></script>
  </body>
 </html>
