--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                <h5 class="header col s12 m6 offset-m3 light mb20">
                   <span class="lang-ro">Bine ai venit</span><span class="lang-en">Welcome</span><span id="salut"></span>! 
                   <span class="lang-ro">Cărțile Bibliei s-au amestecat și au nevoie de ajutorul tău să se așeze în ordine. Află cartea și apoi selectează literele în ordine!</span>
-                  <span class="lang-en">Bible books are mixed and need your help to... Find the book and then select the letters, in order to form the word!</span>
+                  <span class="lang-en">Bible books are mixed and need your help to get in order. Find the book and then select the letters, in order to form the word!</span>
                </h5>
             </div>
             <div class="row center mb0">
